Line wrap in config and fixed clipboard
When the front name is long and wraps on two lines, make sure it does not overlap with the next front.

Move the clipboard out of the scrollable area to make easier dragging items from the bottom of the list

--- a/facia-tool/public/css/style.css
+++ b/facia-tool/public/css/style.css
@@ -1020,7 +1020,7 @@ button {
 
 .cnf-front .title {
     cursor: pointer;
-    height: 24px;
+    min-height: 24px;
     font-weight: normal;
     font-family: inherit;
     font-size: 20px;
